# MPI_Raytracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run.sh
src/: MPI_context.cpp  MPI_context.h  SDL_context.cpp  SDL_context.h  application.cpp  application.h  main.cpp  mpi_data_struct.h  ray.h  sphere.h  vector3.h
src/application/: application.cpp  application.h  camera.h  scene.cpp  scene.h
src/context/: MPI_context.cpp  MPI_context.h  SDL_context.cpp  SDL_context.h
src/frameBuffer/: frameBuffer.cpp  frameBuffer.h
src/globals/: globals.h
src/math/: hitableObject.h  ray.h  sphere.h  triangle.h
src/random/: random.h
src/renderer/: hitRecord.h  hitableList.h  hitableObject.h  light.h  material.h  ray.h  sphere.h  triangle.h
